<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Crowdpp</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="exit">Exit</string>
    <string name="help">Help</string>
    <string name="home_calibration_title">Calibration</string>
    <string name="home_calibration_content">Crowd++ needs your voice to calibrate the system.</string>
    <string name="home_calibration_button">Begin</string>
    <string name="home_service_title">Service</string> 
    <string name="home_service_content">Start audio service running in background.</string> 
    <string name="home_test_title">Test</string> 
    <string name="home_test_content">Try it and see results below.</string> 
    <string name="socialdiary_date_title">Social diary</string>
    <string name="socialdiary_date_content">Check out how socially active everyday you are!</string>
    <string name="socialdiary_date_button">Search</string>

</resources>