<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    tools:context=".MainActivity" >

    <RelativeLayout
        android:id="@+id/rl_home_calibration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="10dp" >

        <TextView
            android:id="@+id/tv_home_calibration_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home_calibration_title"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/tv_home_calibration_content"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_home_calibration_title"
            android:layout_marginLeft="2dp"
            android:layout_marginTop="2dp"
            android:text="@string/home_calibration_content"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <ToggleButton
            android:id="@+id/tb_home_calibration"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true" 
            android:layout_marginTop="10dp"  
            android:textSize="16sp" />
                
        <Chronometer
            android:id="@+id/timer_calibration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/tv_home_calibration_title"
            android:layout_marginLeft="30dp"
            android:layout_toRightOf="@+id/tv_home_calibration_title" />
                
        <!--  
        <Button
            android:id="@+id/bt_home_calibration"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:text="@string/home_calibration_button" 
            android:textSize="16sp" />
		-->
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_home_service"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/rl_home_calibration"
        android:layout_marginTop="10dp" >

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="5dp"          
            android:background="#FFC0C0C0" />

        <TextView
            android:id="@+id/tv_home_service_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home_service_title"
            android:layout_marginTop="10dp"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/tv_home_service_content"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_home_service_title"
            android:layout_marginLeft="2dp"
            android:layout_marginTop="2dp"
            android:text="@string/home_service_content"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <ToggleButton
            android:id="@+id/tb_home_service"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true" 
            android:layout_marginTop="10dp"  
            android:textSize="16sp" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_home_test"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/rl_home_service"
        android:layout_marginTop="10dp" >
        
        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="5dp"
            android:background="#FFC0C0C0" />

        <TextView
            android:id="@+id/tv_home_test_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:text="@string/home_test_title"
        	android:layout_marginTop="10dp"              
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/tv_home_test_content"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_home_test_title"
            android:layout_marginLeft="2dp"
            android:layout_marginTop="2dp"
            android:text="@string/home_test_content"
            android:textAppearance="?android:attr/textAppearanceSmall" />

    	<TextView
        	android:id="@+id/tv_home_test_debug"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentLeft="true"
	        android:layout_marginLeft="2dp"
            android:layout_marginTop="2dp"
	        android:layout_below="@+id/tv_home_test_content"
	        android:textAppearance="?android:attr/textAppearanceSmall" />

    	<TextView
        	android:id="@+id/tv_home_test_record"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentLeft="true"
	        android:layout_marginLeft="2dp"
            android:layout_marginTop="2dp"
	        android:layout_below="@+id/tv_home_test_debug"
	        android:textAppearance="?android:attr/textAppearanceSmall" />
    	    		
        <ToggleButton
            android:id="@+id/tb_home_test"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true" 
        	android:layout_marginTop="10dp"  
        	android:textSize="16sp" />

        <Chronometer
            android:id="@+id/timer_test"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/tv_home_test_title"
            android:layout_marginLeft="30dp"
            android:layout_toRightOf="@+id/tv_home_test_title" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_home_calibration_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/rl_home_calibration"
        android:layout_marginTop="10dp" >

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="5dp"
            android:background="#FFC0C0C0" />

        <TextView
            android:id="@+id/tv_home_calibration_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:maxLines="144"
			android:scrollbars="vertical"
            android:layout_marginLeft="2dp"
            android:layout_marginTop="2dp"
            android:textAppearance="?android:attr/textAppearanceSmall" />

    </RelativeLayout>
</RelativeLayout>